[gd_scene load_steps=2 format=3 uid="uid://chykr51l7r4k4"]

[ext_resource type="Script" uid="uid://b0hxyc1q041ta" path="res://main.gd" id="1_ig7tw"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Timer_enemy" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer_enemy_shoot" type="Timer" parent="."]
wait_time = 6.0

[node name="Label" type="Label" parent="."]
offset_left = 14.0
offset_top = 16.0
offset_right = 114.0
offset_bottom = 39.0
text = "Your score: 0"

[node name="Timer_score" type="Timer" parent="."]
wait_time = 0.578
